<?xml version="1.0"?>
<package>
  <name>lama</name>
  <version>0.1.0</version>
  <description>Framework for robot autonomy in Large Maps (LaMa)</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/lama</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>
  <author email="kosnar@labe.felk.cvut.cz">Karel Košnar</author>
  <author email="vonasek@labe.felk.cvut.cz">Vojtěch Vonásek</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dfs_explorer</run_depend>
  <run_depend>lama_common</run_depend>
  <run_depend>lama_interfaces</run_depend>
  <run_depend>lama_test</run_depend>
  <run_depend>lj_laser</run_depend>
  <run_depend>lj_laser_heading</run_depend>
  <run_depend>local_map</run_depend>
  <run_depend>nj_costmap</run_depend>
  <run_depend>nj_laser</run_depend>
  <run_depend>nlj_dummy</run_depend>
  <run_depend>pm_fourier</run_depend>
  <run_depend>pm_mcc</run_depend>
  <run_depend>polygon_matcher</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
