<?xml version="1.0"?>
<package>
  <name>lama_all</name>
  <version>0.1.0</version>
  <description>All packages related to the framework for robot autonomy in Large Maps (LaMa)</description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/lama</url> -->


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>anj_featurenav</run_depend>
  <run_depend>lama_common</run_depend>
  <run_depend>crossing_detector</run_depend>
  <run_depend>dfs_explorer</run_depend>
  <run_depend>featurenav_base</run_depend>
  <run_depend>goto_crossing</run_depend>
  <run_depend>lama_interfaces</run_depend>
  <run_depend>lama_jockeys</run_depend>
  <run_depend>lj_costmap</run_depend>
  <run_depend>lj_laser</run_depend>
  <run_depend>lj_laser_heading</run_depend>
  <run_depend>local_map</run_depend>
  <run_depend>map_ray_caster</run_depend>
  <run_depend>lama_msgs</run_depend>
  <run_depend>nj_costmap</run_depend>
  <run_depend>nj_escape_crossing</run_depend>
  <run_depend>nj_laser</run_depend>
  <run_depend>nj_oa_costmap</run_depend>
  <run_depend>nj_oa_laser</run_depend>
  <run_depend>nlj_dummy</run_depend>
  <run_depend>pm_fourier</run_depend>
  <run_depend>pm_mcc</run_depend>
  <run_depend>polygon_matcher</run_depend>
  <run_depend>lama_test</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
